<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/serverUrlEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter Server URL"
        android:inputType="textUri" />

    <EditText
        android:id="@+id/uuidEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/serverUrlEditText"
        android:hint="Enter UUID"
        android:inputType="text" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"
        android:layout_below="@id/uuidEditText" />

    <Button
        android:id="@+id/enableVPNButton"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/uuidEditText"
        android:layout_marginTop="69dp"
        android:text="Turn on VPN" />

    <Button
        android:id="@+id/disableVPNButton"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/uuidEditText"
        android:layout_marginTop="121dp"
        android:text="Turn off VPN" />

</RelativeLayout>

